
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/dialog_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:layout_marginTop="24dp"
        android:foregroundGravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/high_Priority"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:checkable="true"
            android:checked="false"
            android:text="High Priority"
            app:checkedIconEnabled="true"
            app:chipBackgroundColor="@color/bg_chip_state_list" />

        <com.google.android.material.chip.Chip
            android:id="@+id/state_New"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New"
            app:checkedIconEnabled="true"
            app:chipBackgroundColor="@color/bg_chip_state_list" />

        <com.google.android.material.chip.Chip
            android:id="@+id/state_Assigned"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Assigned"
            app:checkedIconEnabled="true"
            app:chipBackgroundColor="@color/bg_chip_state_list" />

        <com.google.android.material.chip.Chip
            android:id="@+id/state_INProgress"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="In Progress"
            app:checkedIconEnabled="true"
            app:chipBackgroundColor="@color/bg_chip_state_list" />

        <com.google.android.material.chip.Chip
            android:id="@+id/state_Complete"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="Completed"

            app:checkedIconEnabled="true"
            app:chipBackgroundColor="@color/bg_chip_state_list" />

    </com.google.android.material.chip.ChipGroup>

    <EditText
        android:id="@+id/dialog_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="Title"
        android:inputType="textAutoCorrect|textCapSentences" />

    <EditText
        android:id="@+id/dialog_Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="Description"
        android:inputType="textAutoCorrect|textCapSentences" />

    <TextView
        android:id="@+id/dialog_Count"
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="Total Tasks: " />

</LinearLayout>