
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/detail_Group_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:layout_marginTop="24dp"
        android:foregroundGravity="center|center_horizontal"
        android:textAlignment="center"
        app:chipSpacing="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/detail_High_Priority"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:checked="false"
            android:text="High Priority"
            app:checkedIconEnabled="true"
            app:checkedIconVisible="true"
            app:chipBackgroundColor="@color/bg_chip_state_list" />

        <com.google.android.material.chip.Chip
            android:id="@+id/detail_State_New"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New"
            app:checkedIconEnabled="true"
            app:chipBackgroundColor="@color/bg_chip_state_list" />

        <com.google.android.material.chip.Chip
            android:id="@+id/detail_State_Assigned"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Assigned"
            app:checkedIconEnabled="true"
            app:chipBackgroundColor="@color/bg_chip_state_list" />

        <com.google.android.material.chip.Chip
            android:id="@+id/detail_State_INProgress"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="In Progress"
            app:checkedIconEnabled="true"
            app:chipBackgroundColor="@color/bg_chip_state_list" />

        <com.google.android.material.chip.Chip
            android:id="@+id/detail_State_Complete"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:elegantTextHeight="false"
            android:text="Completed"
            app:checkedIconEnabled="true"
            app:chipBackgroundColor="@color/bg_chip_state_list"
            app:textStartPadding="8dp" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/detail_Location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/detail_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="Title"
        android:inputType="textAutoCorrect" />

    <EditText
        android:id="@+id/detail_Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="Description"
        android:inputType="textAutoCorrect|textMultiLine" />

    <ImageView
        android:id="@+id/previewimg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        tools:srcCompat="@tools:sample/avatars"
        tools:visibility="invisible" />

</LinearLayout>