<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/priority_Item"
        app:actionLayout="@layout/custom_switch"
        app:showAsAction="always" />
    <item
        android:id="@+id/all_tasks_item"
        android:title="All Tasks"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings_item"
        android:title="Settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/authentication"
        android:title="Authenticate" />
    <item
        android:id="@+id/logout"
        android:title="Sign Out" />
    <item
        android:id="@+id/about_item"
        android:title="About"
        app:showAsAction="never" />
</menu>